--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@next/font": "^14.2.3",
     "@supabase/supabase-js": "^2.43.4",
     "next": "14.2.3",
     "react": "^18",
